# dock-plugin-demo

./: .gitignore  CMakeLists.txt  main.cpp
client-plugin/: CMakeLists.txt  dockpluginshellintegration.cpp  dockpluginshellintegration_p.h  dockpluginsurface.cpp  dockpluginsurface_p.h  main.cpp
compositor/: CMakeLists.txt  dockpluginshellextension.cpp  dockpluginshellextension.h  main.cpp
compositor/qml/: main.qml
protocol/: dock-plugin-shell-v1.xml
protocols/: dock-plugin.xml
qml/: main.qml
